Tue May 18 09:37:29 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Version.pm:

          Added code to automatically determine the beta version number at
          run-time.  This number is determined by the manipulating the total
          number of ChangeLog entries.

        * mpc.pl:
        * mwc.pl:

          Provide a getBasePath() function to allow MPC to determine the
          location of the ChangeLog.

Tue May 18 07:22:53 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          When parsing the component list, convert any $(...) to relative
          paths if possible.

Fri May 14 06:45:14 2004  Chad Elliott  <elliott_c@ociweb.com>

        * MPC version 3.1 released.

Wed May 12 08:14:00 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeProjectCreator.pm:

          Sort the directories when forming the cppdir value.  We need to
          ensure that '.' comes first.  Borland make attempts to generate
          source files in each CPPDIR directory until it is successful
          which explains multiple invocations of custom build tools.

Tue May 11 11:36:00 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/em3vcp.mpd:
        * templates/em3vcpdll.mpt:
        * templates/em3vcpdllexe.mpt:
        * templates/em3vcplib.mpt:
        * templates/em3vcplibexe.mpt:

          Added support for ARM v4.  Thanks to Jonathan Pollack
          <pollack_j@ociweb.com> for providing the patches.  Also, I fixed a
          bug where the precompiled header output was going to the wrong
          directory.

Tue May 11 10:53:11 2004  Chad Elliott  <elliott_c@ociweb.com>

        * USAGE:
        * modules/Driver.pm:
        * modules/Options.pm:

          Added a -version option to print the MPC version and exit.

        * modules/ProjectCreator.pm:

          Added libraries and executables to the install script generation.

        * prj_install.pl:
